fixed the issue where the navbar was covering <main/> content

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components{
-  .sidebar-icon{
-    @apply relative flex items-center justify-center
-           h-12 w-12 mt-2 mb-2 mx-auto
-  }
+.layout {
+  @apply flex
 }
